Fix. Craete popup moved into separate file and used for vocabularyCreation.js and vocabularyMigration.js Avoid popup going beyond the screen. Keep all it's content visible. Set max height 50vh. Added scroll support by Y axis with invisible scroll thumb.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -449,6 +449,9 @@
   border: 1px solid var(--rg-border-primary);
   border-radius: 8px !important;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1) !important;
+  max-height: 50vh;
+  overflow-y: auto;
+  scrollbar-width: none;
   z-index: 3100;
 
   .group-tab {
@@ -457,6 +460,7 @@
     justify-content: center;
     padding: 0 16px;
     height: 32px;
+    min-height: 32px;
     font: 600 14px "Montserrat", sans-serif;
     border-radius: 4px !important;
     background: var(--rg-bg-card);
